# glitchicons

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SETUP_WINDOWS.ps1  brute_force.py  brute_force_heavy.py  code_mapper.py  coverage_map.py  crash_triage.py  docker-compose.yml  engagement_template.yaml  glitchicons.py  glitchicons_brain.py  protocol_fuzzer.py  pyproject.toml  report_exporter.py  requirements.txt  rl_agent.py  seed_generator.py
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
glitchagent/: go.mod  main.go
glitchai/: go.mod  main.go
glitchbrute/: go.mod  main.go
glitchcloak/: go.mod  main.go
glitchcloud/: go.mod  main.go
glitchd/: go.mod  main.go
glitchdesync/: go.mod  main.go
glitchdns/: go.mod  main.go
glitchevade/: go.mod  main.go
glitchexploit/: go.mod  main.go
glitchftp/: go.mod  main.go
glitchfuzz/: go.mod  main.go
glitchfuzz2/: go.mod  main.go
glitchfuzz3/: go.mod  main.go
glitchhttp2/: go.mod  main.go
glitchicons/: __init__.py  cli.py  plugin_system.py
glitchids/: go.mod  main.go
glitchimplant/: go.mod  main.go
glitchiot/: go.mod  main.go
glitchkerberos/: go.mod  main.go
glitchldap/: go.mod  main.go
glitchorchestrator/: go.mod  main.go
glitchpcap/: go.mod  main.go
glitchpivot/: go.mod  main.go
glitchproxy/: go.mod  main.go
glitchquic/: go.mod  main.go
glitchrace/: go.mod  main.go
glitchrdp/: go.mod  main.go
glitchrelay/: go.mod  main.go
glitchscan/: go.mod  main.go
glitchsmb/: go.mod  main.go
glitchsnmp/: go.mod  main.go
glitchssh/: go.mod  main.go
glitchsupply/: go.mod  main.go
glitchtls/: go.mod  main.go
glitchvnc/: go.mod  main.go
glitchwatcher/: go.mod  main.go
glitchwmi/: go.mod  main.go
modules/auth/: auth_expansion.py  jwt_analyzer.py  mfa_bypass.py  oauth_tester.py  session_analyzer.py
modules/business/: business_logic.py
modules/business_logic/: idor_fuzzer.py  price_manipulator.py  race_condition.py
modules/cicd/: cicd_security.py
modules/cloud/: cloud_native_v2.py  cloud_security.py
modules/collab/: collaboration.py
modules/config/: __init__.py  config_loader.py  siege_runner.py
modules/core/: async_engine.py  database.py  multi_target.py  scan_orchestrator.py  scheduler.py  webhooks.py
modules/dashboard/: dashboard.py
modules/go/: go_runner.py
modules/inject/: api_security.py  cors_checker.py  graphql_fuzzer.py  grpc_fuzzer.py  sqli_tester.py  ssrf_tester.py  ssti_tester.py  websocket_fuzzer.py  xss_tester.py  xxe_tester.py
modules/integrations/: cicd_native.py  integrations.py
modules/intelligence/: fp_reducer.py  llm_intelligence_v2.py  llm_mutator.py  severity_reasoner.py  threat_intel.py  waf_evasion.py
modules/marketplace/: plugin_marketplace.py
modules/mobile/: mobile_api.py
modules/recon/: cloud_assets.py  openapi_parser.py  recon_engine.py  subdomain_takeover.py  tech_fingerprint.py
modules/report/: __init__.py  ai_reporter.py  compliance.py  executive_dashboard.py  html_reporter.py  pdf_reporter.py  remediation_tracker.py
modules/scanner/: nuclei_wrapper.py
tests/: __init__.py  conftest.py  test_advanced_reporting.py  test_ai_reporter.py  test_api_security.py  test_auth_expansion.py  test_business_logic.py  test_cicd_native.py  test_cicd_security.py  test_cloud_native_v2.py  test_cloud_security.py  test_collaboration.py  test_compliance.py  test_config_loader.py  test_cors_checker.py  test_crash_triage.py  test_fp_reducer.py  test_go_runner.py  test_graphql_fuzzer.py  test_grpc_fuzzer.py  test_html_reporter.py  test_inject_modules.py  test_integrations.py  test_jwt_analyzer.py  test_llm_intelligence_v2.py  test_llm_mutator.py  test_mfa_bypass.py  test_mobile_api.py  test_openapi_parser.py  test_packaging.py  test_performance.py  test_plugin_marketplace.py  test_seed_generator.py  test_severity_reasoner.py  test_subdomain_takeover.py  test_threat_intel.py  test_v200.py  test_v300_backend.py  test_waf_evasion.py  test_websocket_fuzzer.py
wordlists/: .gitignore
