[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "glitchicons"
version = "0.7.0-dev"
description = "AI-powered fuzzing and security research platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "ardanov96", email = "ardanov96@gmail.com" }
]
keywords = ["fuzzing", "security", "ai", "pentest", "afl", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "requests>=2.31",
  "httpx>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "ollama>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "responses>=0.25",
  "httpretty>=1.1",
  "ruff>=0.4",
  "bandit>=1.7",
]
ml = [
  "torch>=2.0",
  "stable-baselines3>=2.0",
]

[project.scripts]
glitchicons = "glitchicons:cli"

[project.urls]
Homepage    = "https://github.com/ardanov96/glitchicons"
Repository  = "https://github.com/ardanov96/glitchicons"
Issues      = "https://github.com/ardanov96/glitchicons/issues"
Changelog   = "https://github.com/ardanov96/glitchicons/blob/main/CHANGELOG.md"

# ── Ruff (linter) ────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", "wordlists", "findings", "engagements"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]
ignore  = [
  "S101",  # assert allowed in tests
  "S603",  # subprocess allowed (core functionality)
  "S607",  # partial path for tools (afl-fuzz etc.)
  "S108",  # /tmp usage (crash triage)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "E501"]

# ── Pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "slow: marks tests as slow (skip with -m 'not slow')",
  "integration: needs network or external tools",
  "unit: pure unit tests (no external deps)",
]

# ── Coverage ─────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit   = [".venv/*", "tests/*", "wordlists/*", "findings/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under   = 60
