[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "glitchicons"
version = "1.0.0"
description = "AI-powered security research platform — fuzzing, web offensive, intelligence layer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "ardanov96", email = "ardanov96@gmail.com" }
]
keywords = [
  "fuzzing", "security", "pentest", "ai", "llm",
  "afl", "graphql", "websocket", "cors", "grpc",
  "openapi", "waf", "cvss",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Testing",
]

dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "requests>=2.31",
  "httpx>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "dnspython>=2.6",
]

[project.optional-dependencies]
grpc = [
  "grpcio>=1.60",
  "grpcio-reflection>=1.60",
]
websocket = [
  "websocket-client>=1.7",
]
ml = [
  "torch>=2.0",
  "stable-baselines3>=2.0",
]
all = [
  "grpcio>=1.60",
  "grpcio-reflection>=1.60",
  "websocket-client>=1.7",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "responses>=0.25",
  "httpretty>=1.1",
  "ruff>=0.4",
  "bandit>=1.7",
  "build>=1.0",
  "twine>=5.0",
]

[project.scripts]
glitchicons = "glitchicons.cli:main"

[project.entry-points."glitchicons.plugins"]
# Plugin entry point — third-party plugins register here
# Example: myplugin = "myplugin.module:MyPlugin"

[project.urls]
Homepage    = "https://github.com/ardanov96/glitchicons"
Repository  = "https://github.com/ardanov96/glitchicons"
Issues      = "https://github.com/ardanov96/glitchicons/issues"
Changelog   = "https://github.com/ardanov96/glitchicons/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ardanov96/glitchicons#readme"

# ── Package discovery ─────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["glitchicons*", "modules*"]
exclude = [
  "tests*", "findings*", "engagements*",
  "wordlists*", ".venv*",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

# ── Ruff ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", "wordlists", "findings", "engagements", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore  = [
  "E501",  # line too long (handled by formatter)
  "N806",  # variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F401"]

# ── Pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-v --tb=short"
markers = [
  "unit: pure unit test (no network, no external tools)",
  "integration: requires network or external services",
  "slow: test that takes > 10 seconds",
]

# ── Coverage ─────────────────────────────────────────────
[tool.coverage.run]
source = ["glitchicons", "modules"]
omit   = [
  ".venv/*", "tests/*", "wordlists/*",
  "findings/*", "build/*", "dist/*",
]

[tool.coverage.report]
show_missing = true
fail_under   = 60
